--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,17 @@ jobs:
           cd scripts && ../ve1/bin/pip3 install -r requirements.txt && cd ..
           cd scripts && ../ve1/bin/python3 setup.py install && cd ..
 
+      - name: Run All Tests
+        if: ${{ steps.reflect_on_pr_content.outputs.create_pull_requests == 'true' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BOT_NAME: ${{ secrets.BOT_NAME }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          PR_BODY: "Test triggered by release PR ${{ github.event.pull_request.html_url }}."
+        run: |
+          ve1/bin/pytest tests/ --ignore=tests/functional/step_defs/test_smoke_scenarios.py --ignore=tests/functional/step_defs/test_submitted_charts.py --log-cli-level=WARNING --tb=short
+
       - name: Check if version updated
         id: check_version_updated
         if: ${{ steps.reflect_on_pr_content.outputs.create_pull_requests == 'true' }}
