Fixed the nightly job

--- a/.github/workflows/nightly_test.yml
+++ b/.github/workflows/nightly_test.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Run All Tests
         id: run_all_tests
         env:
-          GITHUB_TOKEN: ${{ GITHUB_TOKEN }}
-          BOT_NAME: ${{ BOT_NAME }}
-          BOT_TOKEN: ${{ BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BOT_NAME: ${{ secrets.BOT_NAME }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           PR_BODY: "Test triggered by nightly run."
         run: |
           ve1/bin/pytest tests/ --log-cli-level=WARNING --ignore=tests/functional/step_defs/test_smoke_scenarios.py --ignore=tests/functional/step_defs/test_submitted_charts.py --tb=short
