--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,8 +102,8 @@ jobs:
           PR_NUMBER: ${{ github.event.pull_request.number }}
           PR_BODY: "Test triggered by ${{ github.event.pull_request.html_url }}."
         run: |
-          if ${{steps.check_if_release_pr.outputs.charts_release_branch == 'true'}} ; then
-            echo "Release PR from dev to charts, so running full tests"
+          if ${{steps.check_if_release_pr.outputs.charts_release_branch == 'true' || steps.check_request.outputs.full_tests_in_pr == 'true'}} ; then
+            echo "Release PR from dev to charts, oer PR with new full test, so running full tests"
             ve1/bin/pytest tests/ --log-cli-level=WARNING --ignore=tests/functional/step_defs/test_smoke_scenarios.py --ignore=tests/functional/step_defs/test_submitted_charts.py --tb=short
           else
             echo "Not a release PR from dev to charts, so running only smoke tests"
