Refactor get-verifiy-param to use Submission (#418)
This commit doesn't change the behavior of the get-verify-param step. It
builds upon the new Submission data structure to avoid additional calls
to the GitHub API and improve some readability aspects of the code.

This commit also introduces a slight modification to the Submission data
structure. Previously, the path related to the chart's source pointed to
the "./src/Chart.yaml" file, it now points to the "./src" directory.
This is useful as this is one of the return value of
generate_verify_options.

Finally, this commit also changes the SUBMISSION_PATH environment
variable to an absolute path. This way, steps that run from within the
"./pr-branch" directory such as get-verify-param can easily load the
submission artifact. Note that $GITHUB_WORKSPACE is the default path
under which load an artifact is downloaded by the download-artifact
action.

Signed-off-by: Matthias Goerens <mgoerens@redhat.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,10 @@ on:
 env:
   # Path to the submission artifact.
   # This artifact is created in the 'validate-submission' job. It contains a JSON representation of
-  # the Submision object. It can be read by other jobs to access those information rather than
+  # the Submission object. It can be read by other jobs to access those information rather than
   # fetch them from the GitHub API a second time.
-  SUBMISSION_PATH: "submission.json"
+  SUBMISSION_PATH: "${{ github.workspace }}/submission.json"
+  SUBMISSION_ARTIFACT_NAME: submission
 
 jobs:
   setup:
@@ -159,7 +160,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: ${{ always() && steps.validate-submission.outputs.submission_file_present == 'true' }}
         with:
-          name: submission
+          name: ${{ env.SUBMISSION_ARTIFACT_NAME }}
           path: ${{ env.SUBMISSION_PATH }}
 
       - name: Add 'content-ok' label
@@ -231,7 +232,7 @@ jobs:
       - name: Download submission information
         uses: actions/download-artifact@v4
         with:
-          name: submission
+          name: ${{ env.SUBMISSION_ARTIFACT_NAME }}
 
       - name: Remove 'authorized-request' label from PR
         uses: actions/github-script@v7
@@ -262,7 +263,7 @@ jobs:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         working-directory: ./pr-branch
         run: |
-          ../ve1/bin/get-verify-params --directory=pr --api-url=${{ github.event.pull_request._links.self.href }}
+          ../ve1/bin/get-verify-params --directory=pr
 
       - name: Install oc
         id: install-oc
@@ -427,7 +428,7 @@ jobs:
       - name: Download submission information
         uses: actions/download-artifact@v4
         with:
-          name: submission
+          name: ${{ env.SUBMISSION_ARTIFACT_NAME }}
 
       # Chart report errors are only present if an error has occured during the chart_report
       - name: Download chart_report errors
